# Information-Flow-Analysis-Thesis

./: Makefile  README.md  ebpf-cfg.cabal  loadAndAttachEbpf.sh  runebpfDecoder.sh  t.txt
.github/workflows/: ci.yml
app/: Analysis.hs  Cfg.hs  Equations.hs  Main.hs  Types.hs
ebpfPrograms/: example_opcodes.txt  firstProg.asm
ebpfPrograms/basePrograms/: example.c  forloop.c  ifProgram.c  mapsFun.c  nestedFor.c  switchCase.c
ebpfPrograms/bytecodePrograms/: example.asm  forloop.asm  ifProgram.asm  mapsFun.asm  nestedFor.asm  simplePrint.asm  switchCase.asm
ebpfPrograms/graphs/: example.dot  forLoop.dot  forloop.dot  ifProgram.dot  mapsFun.dot  nestedFor.dot  simplePrint.dot  switchCase.dot
examples/: bigNegMemoryStore.asm  doWhile.asm  doWhileIfNested.asm  example.asm  ifStatementNested.asm  invalidReg.asm  largeMemoryIndex.asm  loadFromImm.asm  loadFromReg.asm  memoryOpLoop.asm  nestedWhiles.asm  seqWhiles.asm  test.asm  whileLoop.asm
examples/graphs/: a.dot  b.dot  doWhile.dot  doWhileIfNested.dot  example.dot  ifStatementNested.dot  largeMemoryIndex.dot  loadFromImm.dot  loadFromReg.dot  memoryOpLoop.dot  nestedWhiles.dot  seqWhiles.dot  test.dot  whileLoop.dot  whileLoopLow.dot
graphs/: doWhileIfNested.dot
src/IFA/: Analysis.hs  Cfg.hs  Equations.hs  IntervalAnalysis.hs  Types.hs
test/: ControlFlowTest.hs  runtests.hs
utils/: Thesis_Tasks.txt  commands
utils/thesis_personal/: Questions.txt  Thesis_Tasks.txt
