cabal-version: 3.4
name: ebpf-cfg
version: 0.1.0.0
synopsis: CFG and information flow analysis for eBPF programs
homepage: https://github.com/kfl/ebpf-cfg
license: MIT
author: Ken Friis Larsen
maintainer: kflarsen@di.ku.dk
build-type: Simple

common common
    ghc-options: -Wall
    build-depends:
        base >= 4.14 && < 5,
        containers,
        ebpf-tools == 0.2.0.0
    default-language: Haskell2010

library
    import: common
    exposed-modules:
        IFA.Types
        IFA.Equations
        IFA.Analysis
        IFA.Cfg
    hs-source-dirs: src
    default-language: Haskell2010
    build-depends:
        dom-lt,
        text-display
        
executable ebpf-cfg
    import: common
    main-is: Main.hs
    hs-source-dirs: app
    build-depends:
        dom-lt,
        ebpf-cfg
    default-language: Haskell2010

test-suite test
    import: common
    type: exitcode-stdio-1.0
    main-is: runtests.hs
    default-language: Haskell2010
    hs-source-dirs:   test
    other-modules:
        ControlFlowTest
    build-depends:
      tasty,
      tasty-hunit,
      dom-lt,
      ebpf-cfg
